js/js.translator/testData/incremental/invalidation/companionWithStdLibCall/lib1/l1.1.kt
class MyClass1 {
    companion object {
        fun companionMethod(v: Int): Int {
            return v.countTrailingZeroBits()
        }
    }
}
